corrección en intro

--- a/AnalisisNE/Intro.tex
+++ b/AnalisisNE/Intro.tex
@@ -6,10 +6,10 @@ resultados sobre algún objeto de la teoría, como puede ser una
 función. La definición usual de límite es la conocida
 ``$\e$ , $\delta$''. Sin embargo, en los inicios del cálculo,
 Leibniz intentó fundamentar otra definición, la cual consiste en
-usar \emph{infinitesimales} o \emph{hiperreales}, que son números
-infinitamente pequeños o infinitamente grandes. Dichos números debian
-comportarse, respectivamente, de la siguiente manera:
-un número infinitamente pequeño es menor que todo número real positivo
+usar \emph{hiperreales}, que son una extensión de los reales con
+números infinitamente pequeños o infinitamente grandes. Dichos números
+debian comportarse, respectivamente, de la siguiente manera: un número
+infinitamente pequeño es menor que todo número real positivo
 pero mayor a $0$, y un número infinitamente grande es mayor que todo
 número real. Leibniz sostenía que dichos números debían mantener las
 mismas propiedades que los números reales, en cierta manera.
