--- a/AnalisisNE/Intro.tex
+++ b/AnalisisNE/Intro.tex
@@ -26,6 +26,9 @@ embargo, no hacen parte del objetivo de este proyecto, el cual consta de
 presentar esta idea en relación al análisis estándar, específicamente,
 el análisis diferencial.
 
+La construcción de los hiperreales se puede hacer de varias maneras. Para este
+artículo, se tomo como referencia una construcción presentada por W.A.J. Luxemburg
+\cite{Luxemburg}.
 Los pasos para la construcción de estos números recurre a los filtros,
 objetos de la teoría de conjuntos sobre los que se hablará en el
 documento. Con estos, se puede lograr la construcción de esta nueva especie
