--- a/AnalisisNE/main.tex
+++ b/AnalisisNE/main.tex
@@ -14,6 +14,9 @@
 \usepackage{dsfont}
 \usepackage{upgreek}
 \usepackage{amsthm}
+\usepackage{csquotes}
+\usepackage[sorting=none]{biblatex}
+\addbibresource{Referencias.bib}
 \usepackage{geometry}
 \geometry{
   left=2cm,
@@ -164,5 +167,9 @@
 \include{Sucesiones}
 
 \include{ContDif}
+
+\nocite{Ultrafilters}
+\nocite{Robinson}
+\printbibliography[heading=bibintoc]
 
 \end{document}
